--- a/app/src/main/res/layout/mybooks_main.xml
+++ b/app/src/main/res/layout/mybooks_main.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="144dp"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:orientation="vertical">
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="4dp">
 
         <TextView
-            android:id="@+id/mybookName"
+            android:id="@+id/mytitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -19,7 +22,7 @@
 
 
         <TextView
-            android:id="@+id/mybookAuthor"
+            android:id="@+id/myauthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
