--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="3">
 
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical">
 
 
@@ -49,27 +51,7 @@
             android:layout_gravity="center"
             android:text="Выбрать книги" />
 
-        <Button
-            android:id="@+id/mydetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:elevation="7dp"
-            android:stateListAnimator="@null"
-            android:translationZ="5dp"
-            android:layout_gravity="center"
-            android:text="Мои данные" />
-        <Button
-            android:id="@+id/newdetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:elevation="7dp"
-            android:stateListAnimator="@null"
-            android:translationZ="5dp"
 
-            android:layout_gravity="center"
-            android:text="Новые даные" />
     </LinearLayout>
 
     <LinearLayout
@@ -78,10 +60,10 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="v.1" />
+            android:text="v.1 \n Школьная библиотека Лицей №888" />
     </LinearLayout>
 </LinearLayout>
