--- a/app/src/main/res/layout/booklist.xml
+++ b/app/src/main/res/layout/booklist.xml
@@ -5,28 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Searcher" />
-
     <Button
-        android:id="@+id/searchbtn"
+        android:id="@+id/synch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search" />
+        android:text="synchronize" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_viewselect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item2" />
+        tools:listitem="@layout/list_item" />
 
 
 </LinearLayout>
