--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,48 +1,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:layout_height="109dp"
+    android:background="@color/black"
+    android:orientation="horizontal">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="109dp"
-        android:orientation="horizontal">
+        android:layout_height="105dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="4dp">
 
-
-
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
             android:layout_margin="8dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_margin="8dp"
-                android:text="Название"
-                android:textSize="20dp" />
+            android:text="Название"
+            android:textSize="20dp" />
 
 
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="Автор"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/reservebtn"
+        <TextView
+            android:id="@+id/author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Reserve" />
-
+            android:layout_margin="8dp"
+            android:text="Автор"
+            android:textSize="20dp" />
     </LinearLayout>
+
 </LinearLayout>
