--- a/app/src/main/res/layout/newdetails_main.xml
+++ b/app/src/main/res/layout/newdetails_main.xml
@@ -4,50 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/newname"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:hint="Имя"
-        android:textSize="16dp" />
-
-    <EditText
-        android:id="@+id/newfamname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:hint="Фамилия"
-        android:textSize="16dp" />
-
-    <EditText
-        android:id="@+id/newsurname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:hint="Отчество"
-        android:textSize="16dp" />
-
+        android:gravity="center"
+        android:textSize="30dp"
+        android:text="Авторизация"/>
     <EditText
         android:id="@+id/newnumpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Идентификационный номер"
-        android:textSize="16dp" />
-
-    <EditText
-        android:id="@+id/newbirthday"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:hint="ДД.ММ.ГГ"
+        android:inputType="number"
+        android:hint="Ваш Идентификационный номер"
+        android:layout_gravity="center"
         android:textSize="16dp" />
 
     <Button
         android:id="@+id/btnok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="8dp"
         android:text="OK"
         android:textSize="16dp" />
